--- a/app.css
+++ b/app.css
@@ -7,13 +7,11 @@
 body, html {
     background-color: #F2EAE2;
     max-width: 100%;
-    /* height: 100vh; */
     display: flex;
 }
 
 main {
     width: 90%;
-    /* height: 95%; */
     margin: 25% auto;
     background-color: white; 
     border-radius: 10px;
@@ -82,4 +80,68 @@ main {
     padding: 24px 0;
 }
 
+.button:focus {
+    background-color: #1A4032;
+}
 
+@media (min-width: 768px) {
+    body,html {
+        display: unset;
+        /* justify-content: center; */
+    }
+
+    main {
+        display: flex;
+        flex-direction: row;
+        width: 35%;
+        max-width: 900px;
+        margin: 10% auto;
+        border-radius: 10px;
+    }
+
+    .image-mobile {
+        display: none;
+    }
+
+    .image-desktop {
+        display: block!important;
+        width: 50%;
+        border-radius: 10px 0 0 10px;
+    }
+
+    .text-content {
+        width: 50%;
+        padding: 40px;
+    }
+
+    .category, .header, .description, .prices, .button {
+        padding: 0 0 20px 0;
+    }
+
+    .header {
+        padding-top: 0;
+        width: 70%;
+    }
+
+    .description {
+        padding-top: 10px;
+        width: 90%;
+    }
+
+    .prices {
+        gap: 10px;
+    }
+
+    .prices span {
+        font-size: 14px;
+    }
+
+    .button {
+        padding: 16px 0;
+    }
+
+    .button:hover {
+        background-color: #1A4032;
+        cursor: pointer;
+    }
+}
