--- a/app.css
+++ b/app.css
@@ -7,15 +7,20 @@
 body, html {
     background-color: #F2EAE2;
     max-width: 100%;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden; 
 }
 
 main {
     width: 90%;
-    margin: 25% auto;
+    max-width: 600px;
     background-color: white; 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    overflow: hidden;
 }
 
 .image-mobile {
@@ -85,17 +90,17 @@ main {
 }
 
 @media (min-width: 768px) {
-    body,html {
-        display: unset;
-        /* justify-content: center; */
+    body, html {
+        justify-content: center;
+        height: 100vh;
     }
 
     main {
         display: flex;
         flex-direction: row;
-        width: 35%;
+        width: 80%;
         max-width: 900px;
-        margin: 10% auto;
+        margin: auto;
         border-radius: 10px;
     }
 
